[tool.poetry]
name = "learning-grpc"
version = "0.1.0"
description = "An example for learning GRPC."
authors = ["Ceres Cartman <chengzhoukun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.26.0"
protobuf = "^3.18.3"
grpcio-tools = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
